--- a/view/hr_streamline.xml
+++ b/view/hr_streamline.xml
@@ -7,7 +7,7 @@
             <field name="model">hr.employee</field>
             <field name="inherit_id" ref="hr.view_employee_form"/>
             <field name="arch" type="xml">
-                <page string="HR Settings" position="after">
+                <page string="HR Settings JENKINS TEST" position="after">
                     <page string="Signature">
                         <field name="signature" widget='image' class="oe_left"/>
                     </page>
