Add an "administrative documents" tab where attachments related to the employee can be managed Alllow management of the list of administrative document types Fix #1

--- a/view/hr_streamline.xml
+++ b/view/hr_streamline.xml
@@ -5,13 +5,25 @@
         <record id="view_hr_employee_streamline_form" model="ir.ui.view">
             <field name="name">hr.employee.streamline.form</field>
             <field name="model">hr.employee</field>
-            <field name="inherit_id" ref="hr.view_employee_form"/>
+            <field name="inherit_id" ref="hr.view_employee_form" />
             <field name="arch" type="xml">
+
                 <page string="HR Settings" position="after">
-                    <page string="Signature"  groups="base.group_hr_user">
-                        <field name="signature" widget='image' class="oe_left"/>
+
+                    <!-- Add a "Signature" page. -->
+
+                    <page string="Signature" groups="base.group_hr_user">
+                        <field name="signature" widget='image' class="oe_left" />
                     </page>
+
+                    <!-- Add an "Administrative documents" page. -->
+
+                    <page string="Administrative documents" groups="base.group_hr_user">
+                        <field name="admin_doc_ids" />
+                    </page>
+
                 </page>
+
             </field>
         </record>
 
