--- a/views/hr_operational_department.xml
+++ b/views/hr_operational_department.xml
@@ -9,9 +9,9 @@
             <field name="model">hr.operational_department</field>
             <field name="arch" type="xml">
                 <tree string="Operational departments">
+                    <field name="priority" widget="handle" /> 
                     <field name="department_id" />
                     <field name="company_id" groups="base.group_multi_company" />
-                    <field name="priority" />
                 </tree>
             </field>
         </record>
@@ -23,7 +23,8 @@
                 <form string="Operational department" version="7.0">
                     <group>
                         <field name="department_id" />
-                        <field name="company_id" groups="base.group_multi_company" />
+                        <!-- TODO onchange on department to update the company -->
+                        <field name="company_id" groups="base.group_multi_company" widget="selection"/>
                         <field name="priority" />
                     </group>
                 </form>
