--- a/views/hr_operational_department.xml
+++ b/views/hr_operational_department.xml
@@ -9,7 +9,7 @@
             <field name="model">hr.operational_department</field>
             <field name="arch" type="xml">
                 <tree string="Operational departments">
-                    <field name="priority" widget="handle" /> 
+                    <field name="priority" widget="handle" />
                     <field name="department_id" />
                     <field name="company_id" groups="base.group_multi_company" />
                 </tree>
@@ -24,7 +24,8 @@
                     <group>
                         <field name="department_id" />
                         <!-- TODO onchange on department to update the company -->
-                        <field name="company_id" groups="base.group_multi_company" widget="selection"/>
+                        <field name="company_id" groups="base.group_multi_company"
+                            widget="selection" />
                         <field name="priority" />
                     </group>
                 </form>
