TKT/2015/02753 made the names of the validation groups to which belong employees only accessible for reading in their HR forms
--HG--
branch : odoo8

--- a/views/hr_view.xml
+++ b/views/hr_view.xml
@@ -16,7 +16,7 @@
                                 <group>                                   
                                      <field name="validation_groups">
                                       <tree string="Validation groups member of" editable="top">
-                    						<field name="name"/>
+                    						<field name="name" readonly="1"/>
                     					</tree>
                     					</field>
                                 </group>
